[package]
name = "tmp-rust-cash-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonpath_lib_polars_vendor = { git = "https://github.com/eitsupi/jsonpath", rev = "870b05ca13cae6d1061d4d8fc4b70ea41dcaf420" }
serde_json = "1.0.114"
